@@ -122,7 +122,8 @@ lighter making things easier to read.
 * (bug 8688) Handle underscores/spaces in Special:Blockip and Special:Ipblocklist
   in a consistent manner
 * (bug 8701) Check database lock status when blocking/unblocking users
-* ParserOptions and ParserOutput classes are now in their own files.
+* ParserOptions and ParserOutput classes are now in their own files
+* (bug 8708) Namespace translations for Zealandic language
 
 == Languages updated ==
 
@@ -138,6 +139,7 @@ lighter making things easier to read.
 * Polish (pl)
 * Sicilian (scn)
 * Swedish (sv)
+* Zealandic (zea)
 
 == Compatibility ==
 
